hide tech nav on mobile

--- a/src/app/body/technologies/technologies.component.css
+++ b/src/app/body/technologies/technologies.component.css
@@ -122,10 +122,8 @@
    align-items: center;
   display: flex;
   justify-content: center;
+  display: var(--tech-nav-display);
 }
-
-
-
 
 .dots {
   /* Center the content */
