--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -8,7 +8,11 @@
       I'VE WORKED WITH...
     </div>
   </h1>
+
   <drag-scroll #nav class="draggable">
+    <div class="swipe-notify" (mousedown)="hideSwipeToggle()" (click)="hideSwipeToggle()" [ngClass]="{'swipe-notify' : hideSwipe==false,'hide' : hideSwipe==true}">
+      <img class="slide" src="../../../assets/Swipe-Left.png" alt="swipe left">
+    </div>
     <div drag-scroll-item>
       <div class="icon" style="background-color: #4169e1;">
         <i class="devicon-java-plain-wordmark colored"></i>
