added swipe gesture support

--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -10,7 +10,7 @@
   </h1>
 
   <drag-scroll #nav class="draggable">
-    <div class="swipe-notify" (mousedown)="hideSwipeToggle()" (click)="hideSwipeToggle()" [ngClass]="{'swipe-notify' : hideSwipe==false,'hide' : hideSwipe==true}">
+    <div class="swipe-notify" (mousedown)="hideSwipeToggle()" (swipeleft)="hideSwipeToggle()" (click)="hideSwipeToggle()" [ngClass]="{'swipe-notify' : hideSwipe==false,'hide' : hideSwipe==true}">
       <img class="slide" src="../../../assets/Swipe-Left.png" alt="swipe left">
     </div>
     <div drag-scroll-item>
