got rid of weird line height

--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -30,13 +30,13 @@
     </ng-container>
   </drag-scroll>
 
-  <div class="nav-container">
+  <!-- <div class="nav-container">
     <i
       class="fa fa-arrow-circle-left"
       (click)="moveLeft()"
       aria-hidden="true"
-    ></i>
-    <ul class="dots" #dots>
+    ></i> -->
+    <!-- <ul class="dots" #dots>
       <ng-container *ngFor="let dot of icons; let i = index">
         <li
           [ngClass]="{ dot__active: i == selectedIndex }"
@@ -44,11 +44,11 @@
           (click)="moveTo(i)"
         ></li>
       </ng-container>
-    </ul>
-    <i
+    </ul> -->
+    <!-- <i
       class="fa fa-arrow-circle-right"
       (click)="moveRight()"
       aria-hidden="true"
-    ></i>
-  </div>
+    ></i> -->
+  <!-- </div> -->
 </div>
