--- a/src/app/body/technologies/technologies.component.css
+++ b/src/app/body/technologies/technologies.component.css
@@ -7,6 +7,7 @@
   display: none;
 }
 
+
 img {
   margin-top: 25px;
   opacity: 1;
@@ -21,9 +22,14 @@ img {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .fa {
   font-size: 40px;
   color: hsl(200, 80%, 45%);
+}
+
+.fa:hover{
+  color: hsla(200, 80%, 45%, 0.5);
 }
 
 .slide {
@@ -164,7 +170,7 @@ img {
   .tech {
     font-family: "Bungee Shade", cursive;
     color: hsl(200, 80%, 45%);
-    font-size: 8vw;
+    font-size: 6vw;
     text-align: center;
     -webkit-animation: floating-text 1.3s ease alternate infinite;
     -moz-animation: floating-text 1.3s ease alternate infinite;
@@ -203,6 +209,10 @@ img {
 
   /* OPTIONAL: Spacing between dots */
   margin: 0 4px;
+}
+
+.dots__item:hover{
+  background-color: rgba(128, 128, 128, 0.062);
 }
 
 .dot__active {
@@ -308,7 +318,7 @@ img {
     text-align: center;
     vertical-align: middle;
     line-height: 15vh;
-    font-size: 6vw;
+    font-size: 5vw;
     width: 100%;
     top: 50px;
   }
