--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,11 +6,11 @@
 
   <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
-    <li class="nav-item"><a href="#contact">Contact</a></li>
-    <li class="nav-item"><a href="#res">Resume</a></li>
-    <li class="nav-item"><a href="#technology">Technology</a></li>
-    <li class="nav-item"><a href="#exp">Experience</a></li>
-    <li class="nav-item"><a href="#abt">About</a></li>
+    <li class="nav-item fadein"><a href="#contact">Contact</a></li>
+    <li class="nav-item fadein"><a href="#res">Resume</a></li>
+    <li class="nav-item fadein"><a href="#technology">Technology</a></li>
+    <li class="nav-item fadein"><a href="#exp">Experience</a></li>
+    <li class="nav-item fadein"><a href="#abt">About</a></li>
     <!-- <li class="nav-item"><a href="#">About</a></li> -->
     <li id="menu">
       <i class="fa fa-bars" aria-hidden="true" (click)="toggle()"></i>
