--- a/src/app/body/resume/resume.component.html
+++ b/src/app/body/resume/resume.component.html
@@ -5,7 +5,7 @@
       <h3>Let's build great things together</h3>
 
       <a
-        href="../../../assets/resume.pdf"
+        href="https://drive.google.com/file/d/1ycDRhdoKDxAEn3GScLQh4tNbPwh0s663/view?usp=sharing" target="_blank"
         aria-label="download Jaime Moncayo's resume"
         ><button>Resume</button></a
       >
