--- a/src/app/body/contact/contact.component.css
+++ b/src/app/body/contact/contact.component.css
@@ -3,12 +3,12 @@
 }
 #photo {
   width: 100%;
-  height: 30vh;
-  background-color: black;
+  height: 20vh;
+  background-color: #212529;
   background-size: cover;
   text-align: center;
   vertical-align: middle;
-  line-height: 34vh;
+  line-height: 24vh;
 }
 
 .fa {
