--- a/src/app/body/resume/resume.component.css
+++ b/src/app/body/resume/resume.component.css
@@ -11,7 +11,10 @@
 }
 
 #res-photo {
-  background-image: var(--banner-mobile);
+  /* background-image: var(--banner-mobile); */
+  background-image: linear-gradient(135deg,#02aab0,#1e95cc);
+  /* clip-path: polygon(0 26%, 100% 0, 100% 100%, 0 100%); */
+  clip-path: polygon(0 12.5vh,100% 0,100% 100%,0 100%);
   background-size: 100% 100%;
   width: 100%;
   height: auto;
