--- a/src/app/body/resume/resume.component.css
+++ b/src/app/body/resume/resume.component.css
@@ -12,6 +12,7 @@
 
 #res-photo {
   background-image: linear-gradient(135deg,#02aab0,#1e95cc);
+  /* clip-path: polygon(0 26%, 100% 0, 100% 100%, 0 100%); */
   clip-path: polygon(0 12.5vh,100% 0,100% 100%,0 100%);
   background-size: 100% 100%;
   width: 100%;
@@ -41,11 +42,15 @@ hr {
 }
 
 button {
-  background-color: white;
+  background-color: transparent;
   border-style: solid;
   color: black;
   border-color: black;
   border-width: 0.1em;
   font-size: 1em;
   font-weight: 700;
+}
+
+button:hover {
+  cursor: pointer;
 }
